--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 
         <p style="text-align:center">
           <a href="mailto:gaohuan@xauat.edu.cn">Email</a> &nbsp/&nbsp
-          <!-- <a href="data/CVH.pdf">CV</a> &nbsp/&nbsp 
-          <a href="https://gh050801.github.io">Github</a> &nbsp/&nbsp-->
+          <a href="./asset/cv.pdf">CV</a> &nbsp/&nbsp 
+          <!-- <a href="https://gh050801.github.io">Github</a> &nbsp/&nbsp-->
           <a href="https://scholar.google.com/citations?hl=en&view_op=list_works&gmla=AKKJWFdchMIzby1TxZocQ6jGAthiNq1Elutj8r7cnCd1q-a9HvxPuvbcz78MWU3XPft-6aYF-Yp5nXvVmnx81w&user=b67YH3oAAAAJ">Google Scholar</a> &nbsp/&nbsp
           <a href="https://www.linkedin.com"> LinkedIn </a> 
           
