--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <a href="./asset/cv.pdf">CV</a> &nbsp/&nbsp 
           <!-- <a href="https://gh050801.github.io">Github</a> &nbsp/&nbsp-->
           <a href="https://scholar.google.com/citations?hl=en&view_op=list_works&gmla=AKKJWFdchMIzby1TxZocQ6jGAthiNq1Elutj8r7cnCd1q-a9HvxPuvbcz78MWU3XPft-6aYF-Yp5nXvVmnx81w&user=b67YH3oAAAAJ">Google Scholar</a> &nbsp/&nbsp
-          <a href="https://www.linkedin.com"> LinkedIn </a> 
+          <a href="https://www.linkedin.com/in/huan-gao-6a3b88309/"> LinkedIn </a> 
           
         </p>
 
